--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,30 @@ absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 attrs==24.2.0
+certifi==2024.8.30
 cffi==1.17.1
 click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.5
+fastapi-cli==0.0.5
 flatbuffers==24.3.25
 fonttools==4.54.1
 h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.27.2
 idna==3.10
 jax==0.4.35
 jaxlib==0.4.35
+Jinja2==3.1.4
 kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.9.2
+mdurl==0.1.2
 mediapipe==0.10.15
 ml_dtypes==0.5.0
 numpy==1.26.4
@@ -26,13 +37,22 @@ protobuf==4.25.5
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.17
+PyYAML==6.0.2
+rich==13.9.4
 scipy==1.14.1
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 sounddevice==0.5.1
 starlette==0.41.2
+typer==0.13.1
 typing_extensions==4.12.2
 uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==1.0.0
 websockets==14.1
