--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
 jax==0.4.35
 jaxlib==0.4.35
 Jinja2==3.1.4
@@ -33,12 +34,14 @@ opencv-contrib-python==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.1
 pillow==11.0.0
+pluggy==1.5.0
 protobuf==4.25.5
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 pyparsing==3.2.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
