--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appnope==0.1.4
+astroid==3.3.6
+asttokens==3.0.0
 attrs==24.2.0
 certifi==2024.8.30
 cffi==1.17.1
 click==8.1.7
+comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+dill==0.3.9
 dnspython==2.7.0
+duckdb==1.2.2
 email_validator==2.2.0
+executing==2.2.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
 flatbuffers==24.3.25
@@ -19,43 +28,79 @@ httptools==0.6.4
 httpx==0.27.2
 idna==3.10
 iniconfig==2.0.0
+interchange==2021.0.4
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+isort==5.13.2
 jax==0.4.35
 jaxlib==0.4.35
+jedi==0.19.2
 Jinja2==3.1.4
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.7
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
 mediapipe==0.10.15
 ml_dtypes==0.5.0
+monotonic==1.6
+neo4j==5.28.1
+nest-asyncio==1.6.0
 numpy==1.26.4
+ollama==0.4.8
 opencv-contrib-python==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.1
+pandas==2.2.3
+pansi==2024.11.0
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.51
 protobuf==4.25.5
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py2neo==2021.2.4
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+pylint==3.3.2
 pyparsing==3.2.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
+pytz==2025.2
 PyYAML==6.0.2
+pyzmq==26.4.0
 rich==13.9.4
 scipy==1.14.1
+seaborn==0.13.2
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 sounddevice==0.5.1
+stack-data==0.6.3
 starlette==0.41.2
+tomlkit==0.13.2
+tornado==6.4.2
+traitlets==5.14.3
 typer==0.13.1
 typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.32.0
 uvloop==0.21.0
 watchfiles==1.0.0
+wcwidth==0.2.13
 websockets==14.1
