changed ollama to langchain

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ appnope==0.1.4
 astroid==3.3.6
 asttokens==3.0.0
 attrs==24.2.0
+cachetools==5.5.2
 certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.1.7
 comm==0.2.2
 contourpy==1.3.0
@@ -20,8 +22,12 @@ email_validator==2.2.0
 executing==2.2.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
+filetype==1.2.0
 flatbuffers==24.3.25
 fonttools==4.54.1
+google-ai-generativelanguage
+google-api-core==2.25.0
+google-auth==2.40.3
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -37,9 +43,16 @@ jax==0.4.35
 jaxlib==0.4.35
 jedi==0.19.2
 Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+langchain==0.3.25
+langchain-core==0.3.65
+langchain-google-genai==2.1.5
+langchain-text-splitters==0.3.8
+langsmith==0.3.45
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -47,7 +60,7 @@ matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
-mediapipe==0.10.15
+mediapipe
 ml_dtypes==0.5.0
 monotonic==1.6
 neo4j==5.28.1
@@ -56,6 +69,7 @@ numpy==1.26.4
 ollama==0.4.8
 opencv-contrib-python==4.10.0.84
 opt_einsum==3.4.0
+orjson==3.10.18
 packaging==24.1
 pandas==2.2.3
 pansi==2024.11.0
@@ -65,11 +79,13 @@ pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.51
-protobuf==4.25.5
+proto-plus==1.26.1
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py2neo==2021.2.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -83,15 +99,21 @@ python-multipart==0.0.17
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
+requests==2.32.4
+requests-toolbelt==1.0.0
 rich==13.9.4
+rsa==4.9.1
 scipy==1.14.1
 seaborn==0.13.2
+sentencepiece==0.2.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 sounddevice==0.5.1
+SQLAlchemy==2.0.41
 stack-data==0.6.3
 starlette==0.41.2
+tenacity==9.1.2
 tomlkit==0.13.2
 tornado==6.4.2
 traitlets==5.14.3
@@ -104,3 +126,4 @@ uvloop==0.21.0
 watchfiles==1.0.0
 wcwidth==0.2.13
 websockets==14.1
+zstandard==0.23.0
