--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,9 @@ services:
     volumes:
       - .:/app
     environment:
-      - PYTHONUNBUFFERED=1
-      - OLLAMA_HOST=ollama:11434  # Connect to ollama service directly
-    depends_on:
-      - ollama
-    networks:
-      - gymbuddy-network
-
-  ollama:
-    image: ollama/ollama
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/ollama
+      # These variables are now pulled from your .env file
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
     networks:
       - gymbuddy-network
 
@@ -30,13 +20,11 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./ssl:/etc/nginx/ssl  # For SSL certificates
+    
     depends_on:
       - app
     networks:
       - gymbuddy-network
-volumes:
-  ollama_data:
-
 networks:
   gymbuddy-network:
     driver: bridge
