--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,20 +11,13 @@ services:
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
     networks:
       - gymbuddy-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1' 
+          memory: 512M 
 
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl  # For SSL certificates
-    
-    depends_on:
-      - app
-    networks:
-      - gymbuddy-network
+ 
 networks:
   gymbuddy-network:
     driver: bridge
