--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     upstream gymbuddy {
-        server gymbuddy:8080;
+        server localhost:8080;
     }
 
     # HTTP server (redirects to HTTPS)
@@ -24,7 +24,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         location / {
-            proxy_pass http://gymbuddy;
+            proxy_pass http://localhost;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -33,7 +33,7 @@ http {
 
         # WebSocket support
         location /ws {
-            proxy_pass http://gymbuddy;
+            proxy_pass http://localhost;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
