--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -45,6 +45,10 @@ env:
   SERVICE: 'gymbuddy'
   WORKLOAD_IDENTITY_PROVIDER: 'projects/799858040575/locations/global/workloadIdentityPools/github-actions-cloud-run/providers/github' 
 
+permissions:
+  id-token: write 
+  contents: read 
+
 jobs:
   deploy:
     runs-on: 'ubuntu-latest'
@@ -62,8 +66,8 @@ jobs:
       # See https://github.com/google-github-actions/auth for more options,
       # including authenticating via a JSON credentials file.
       - id: 'auth'
-        name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2.1.10
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
         with:
           workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
 
