--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -93,13 +93,13 @@ jobs:
 
         # END - Docker auth and build
 
-        uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
+        uses: 'google-github-actions/deploy-cloudrun@v2' # google-github-actions/deploy-cloudrun@v2
         with:
           service: '${{ env.SERVICE_RUN }}'
           region: '${{ env.REGION }}'
           # NOTE: If using a pre-built image, update the image name below:
 
-          image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.CONTAINER }}/${{ env.SERVICE_CONTAINER }}:${{ github.sha }}'
+          image: "${DOCKER_TAG}"
       # If required, use the Cloud Run URL output in later steps
       - name: 'Show output'
         run: |2-
