--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -89,17 +89,15 @@ jobs:
           DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.CONTAINER }}/${{ env.SERVICE_CONTAINER }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
-      - name: 'Deploy to Cloud Run'
-
+          
+      - id: 'Deploy to Cloud Run'
         # END - Docker auth and build
-
         uses: 'google-github-actions/deploy-cloudrun@v2' # google-github-actions/deploy-cloudrun@v2
         with:
           service: '${{ env.SERVICE_RUN }}'
           region: '${{ env.REGION }}'
           # NOTE: If using a pre-built image, update the image name below:
-
-          image: "${DOCKER_TAG}"
+          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.CONTAINER }}/${{ env.SERVICE_CONTAINER }}:${{ github.sha }}"
       # If required, use the Cloud Run URL output in later steps
       - name: 'Show output'
         run: |2-
