--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -94,6 +94,7 @@ jobs:
         # END - Docker auth and build
         uses: 'google-github-actions/deploy-cloudrun@v2' # google-github-actions/deploy-cloudrun@v2
         with:
+          project_id: '${{ env.PROJECT_ID }}'
           service: '${{ env.SERVICE_RUN }}'
           region: '${{ env.REGION }}'
           # NOTE: If using a pre-built image, update the image name below:
