--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -30,13 +30,10 @@
 name: 'Build and Deploy to Cloud Run'
 
 on:
-  push:
-    branches: 
-      - main
- # workflow_run:
- #     workflows: ["test-lint-format"] 
- #     types:
- #       - completed 
+  workflow_run:
+    workflows: ["test-lint-format"] 
+    types:
+      - completed 
 
 env:
   PROJECT_ID: 'gymbuddy-464513' 
